src/test/ui/export2.stderr
error[E0425]: cannot find function `x` in `bar`
  --> $DIR/export2.rs:2:23
   |
LL |     pub fn x() { bar::x(); }
   |                       ^ not found in `bar`
   |
help: possible candidates are found in other modules, you can import them into scope
   |
LL |     use bar::x;
   |
LL |     use foo::x;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
